@@ -32,6 +32,16 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 #define MAX_PATH 1024
 #endif //MAX_PATH
 
+/// \name configuration lines
+///@{
+#define OBDCONF_OBDDEVICE "obddevice"
+#define OBDCONF_GPSDEVICE "gpsdevice"
+#define OBDCONF_OPTIMISATIONS "optimisations"
+#define OBDCONF_LOGCOLUMNS "log_columns"
+#define OBDCONF_SAMPLERATE "samplerate"
+#define OBDCONF_BAUDRATE "baudrate"
+///@}
+
 /// Get "a" valid home dir in which to store a dotfile
 static const char *getPlatformHomeDir() {
 	static char homedir[MAX_PATH] = "\0";
@@ -67,36 +77,36 @@ static int obd_parseConfig(FILE *f, struct OBDGPSConfig *c, int verbose) {
 		char singleval_s[1024];
 		int singleval_i;
 		long singleval_l;
-		if(1 == sscanf(line, "obddevice=%1023s", singleval_s)) {
+		if(1 == sscanf(line, OBDCONF_OBDDEVICE "=%1023s", singleval_s)) {
 			if(NULL != c->obd_device) {
 				free((void *)c->obd_device);
 			}
 			c->obd_device = strdup(singleval_s);
 			if(verbose) printf("Conf Found OBD Device: %s\n", singleval_s);
 		}
-		if(1 == sscanf(line, "gpsdevice=%1023s", singleval_s)) {
+		if(1 == sscanf(line, OBDCONF_GPSDEVICE "=%1023s", singleval_s)) {
 			if(NULL != c->gps_device) {
 				free((void *)c->gps_device);
 			}
 			c->gps_device = strdup(singleval_s);
 			if(verbose) printf("Conf Found GPS Device: %s\n", singleval_s);
 		}
-		if(1 == sscanf(line, "log_columns=%1023s", singleval_s)) {
+		if(1 == sscanf(line, OBDCONF_LOGCOLUMNS "=%1023s", singleval_s)) {
 			if(NULL != c->log_columns) {
 				free((void *)c->log_columns);
 			}
 			c->log_columns = strdup(singleval_s);
 			if(verbose) printf("Conf Found log_columns: %s\n", singleval_s);
 		}
-		if(1 == sscanf(line, "baudrate=%li", &singleval_l)) {
+		if(1 == sscanf(line, OBDCONF_BAUDRATE "=%li", &singleval_l)) {
 			c->baudrate = singleval_l;
 			if(verbose) printf("Conf Found baudrate: %li\n", singleval_l);
 		}
-		if(1 == sscanf(line, "samplerate=%i", &singleval_i)) {
+		if(1 == sscanf(line, OBDCONF_SAMPLERATE "=%i", &singleval_i)) {
 			c->samplerate = singleval_i;
 			if(verbose) printf("Conf Found samplerate: %i\n", singleval_i);
 		}
-		if(1 == sscanf(line, "optimisations=%i", &singleval_i)) {
+		if(1 == sscanf(line, OBDCONF_OPTIMISATIONS "=%i", &singleval_i)) {
 			c->optimisations = singleval_i;
 			if(verbose) printf("Conf Found optimisations: %i\n", singleval_i);
 		}
@@ -130,16 +140,41 @@ struct OBDGPSConfig *obd_loadConfig(int verbose) {
 
 	if(verbose) {
 		printf("Full Config:\n"
-					 "	obddevice:%s\n"
-					 "	gpsdevice:%s\n"
-					 "	logcolumns:%s\n"
-					 "	optimisations:%i\n"
-					 "	samplerate:%i\n"
-					 "	baudrate:%li\n",
+					 "	" OBDCONF_OBDDEVICE ":%s\n"
+					 "	" OBDCONF_GPSDEVICE ":%s\n"
+					 "	" OBDCONF_LOGCOLUMNS ":%s\n"
+					 "	" OBDCONF_OPTIMISATIONS ":%i\n"
+					 "	" OBDCONF_SAMPLERATE ":%i\n"
+					 "	" OBDCONF_BAUDRATE ":%li\n",
 					 	c->obd_device, c->gps_device, c->log_columns,
 						c->optimisations, c->samplerate, c->baudrate);
 	}
 	return c;
+}
+
+int obd_writeConfig(struct OBDGPSConfig *c) {
+	char fullfilename[MAX_PATH];
+
+	snprintf(fullfilename, sizeof(fullfilename), "%s/%s",
+			getPlatformHomeDir(), OBD_CONFIG_FILENAME
+			);
+
+	FILE *f = fopen(fullfilename, "w");
+	if(NULL == f) {
+		perror("Couldn't open config file for writing");
+		return 1;
+	}
+
+	fprintf(f, OBDCONF_OBDDEVICE "=%s\n", c->obd_device);
+	fprintf(f, OBDCONF_GPSDEVICE "=%s\n", c->gps_device);
+	fprintf(f, OBDCONF_LOGCOLUMNS "=%s\n", c->log_columns);
+	fprintf(f, OBDCONF_OPTIMISATIONS "=%i\n", c->optimisations);
+	fprintf(f, OBDCONF_SAMPLERATE "=%i\n", c->samplerate);
+	fprintf(f, OBDCONF_BAUDRATE "=%li\n", c->baudrate);
+
+	fclose(f);
+
+	return 0;
 }
 
 /// Free a config created by loadOBDGPSConfig
