@@ -1,6 +1,8 @@
 Version 0.10
  Logger, conf: Ability to adjust serial baudrate
  Initial add of ftdi-pty proxy for systems without ftdi-sio
+ conf: Add ability to write config file back to disk
+ ftdipty can modify config file for obdgpslogger
 
 Version 0.9 (released 2009-09-25)
  Logger: Create indices on tables when the tables are created
